--- a/FA.JustBlog.Web/FA.JustBlog.Web.csproj
+++ b/FA.JustBlog.Web/FA.JustBlog.Web.csproj
@@ -35,11 +35,19 @@
   <ItemGroup>
     <Folder Include="Areas\Admin\Data\" />
     <Folder Include="Areas\Identity\Data\" />
+    <Folder Include="Views\Comment\" />
     <Folder Include="Views\Tag\" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\FA.JustBlog.Core\FA.JustBlog.Core.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Update="Views\Shared\_CommentPartial.cshtml">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
